# infinity-craft-logger

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: actionlint.yml  ci.yml  release.yml  review.yml
assets/: client-script.user.js
src/: main.rs
