[package]
name = "infinit-craft-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros"] }
